// TPMS Backend Database Schema
// Copy this entire file and paste at: https://dbdiagram.io/
// Last Updated: October 21, 2025

// ==========================================
// MAIN CRUD TABLES
// ==========================================

Table vendors {
  id integer [pk, increment, note: 'Primary Key']
  nama_vendor varchar(255) [not null, note: 'Maps to: name']
  address text [null]
  nomor_telepon varchar(50) [null, note: 'Maps to: phone']
  email varchar(255) [null]
  kontak_person varchar(255) [null, note: 'Maps to: contactPerson']
  created_at timestamptz [not null, default: `now()`, note: 'Maps to: createdAt']
  updated_at timestamptz [not null, default: `now()`, note: 'Maps to: updatedAt']
  
  indexes {
    nama_vendor [name: 'idx_vendors_nama']
  }
}

Table drivers {
  id integer [pk, increment, note: 'Primary Key']
  name varchar(255) [not null]
  phone varchar(50) [null]
  email varchar(255) [null]
  address text [null]
  license_number varchar(50) [not null, note: 'Maps to: licenseNumber']
  license_type varchar(20) [not null, note: 'Maps to: licenseType']
  license_expiry date [not null, note: 'Maps to: licenseExpiry']
  id_card_number varchar(50) [not null, note: 'Maps to: idCardNumber']
  vendor_id integer [null, note: 'Maps to: vendorId']
  status varchar(20) [not null, default: 'aktif']
  created_at timestamptz [not null, default: `now()`, note: 'Maps to: createdAt']
  updated_at timestamptz [not null, default: `now()`, note: 'Maps to: updatedAt']
  
  indexes {
    vendor_id [name: 'idx_drivers_vendor_id']
    status [name: 'idx_drivers_status']
    license_expiry [name: 'idx_drivers_license_expiry']
  }
}

Table fleet_group {
  id uuid [pk, note: 'Primary Key UUID']
  name varchar(255) [not null]
  site varchar(255) [null]
  description text [null]
  created_at timestamptz [default: `now()`, note: 'Maps to: createdAt']
  created_by uuid [null, note: 'Maps to: createdBy']
  updated_by uuid [null, note: 'Maps to: updatedBy']
}

Table truck {
  id uuid [pk, note: 'Primary Key UUID']
  code varchar(4) [unique, null]
  vin varchar(17) [unique, null]
  name varchar(255) [null]
  model varchar(255) [null]
  year integer [null]
  tire_config varchar(255) [null, note: 'Maps to: tireConfig']
  fleet_group_id uuid [null, note: 'Maps to: fleetGroupId']
  vendor_id integer [null, note: 'Maps to: vendorId']
  created_at timestamptz [not null, default: `now()`, note: 'Maps to: createdAt']
  created_by uuid [null, note: 'Maps to: createdBy']
  updated_by uuid [null, note: 'Maps to: updatedBy']
  
  indexes {
    code [unique, name: 'idx_truck_code']
    vin [unique, name: 'idx_truck_vin']
    vendor_id [name: 'idx_truck_vendor_id']
    fleet_group_id [name: 'idx_truck_fleet_group_id']
  }
}

// ==========================================
// RELATIONSHIPS
// ==========================================

Ref: vendors.id < drivers.vendor_id [delete: set null]
Ref: vendors.id < truck.vendor_id [delete: set null]
Ref: fleet_group.id < truck.fleet_group_id [delete: no action]

// ==========================================
// SUPPORTING TABLES - IoT & Telemetry
// ==========================================

Table device {
  id uuid [pk]
  truck_id uuid [not null]
  sn varchar [unique, not null, note: 'Device serial number']
  sim_number varchar [null]
  installed_at timestamptz [default: `now()`]
  removed_at timestamptz [null]
  created_by uuid [null]
  updated_by uuid [null]
}

Table gps_position {
  id bigint [pk, increment]
  device_id uuid [null]
  truck_id uuid [not null]
  ts timestamptz [not null, note: 'Timestamp']
  speed_kph real [null]
  heading_deg real [null]
  hdop real [null]
  source varchar [null]
  
  indexes {
    (truck_id, ts) [name: 'idx_gps_position_truck_ts']
  }
}

Table tire_pressure_event {
  id uuid [pk]
  device_id uuid [not null]
  truck_id uuid [not null]
  tire_no integer [not null]
  pressure_kpa real [null]
  temp_celsius real [null]
  ex_type varchar [null]
  battery_level smallint [null]
  changed_at timestamptz [not null, default: `now()`]
  created_by uuid [null]
  
  indexes {
    (truck_id, changed_at) [name: 'idx_tire_pressure_truck_ts']
    (tire_no, changed_at) [name: 'idx_tire_pressure_tire_no']
  }
}

Table alert_event {
  id uuid [pk]
  truck_id uuid [not null]
  type varchar(50) [not null, note: 'LOW_TIRE, SPEEDING, etc']
  severity smallint [null]
  detail json [null]
  occurred_at timestamptz [not null, default: `now()`]
  acknowledged boolean [default: false]
  created_by uuid [null]
}

Table device_status_event {
  id uuid [pk]
  device_id uuid [not null]
  truck_id uuid [not null]
  host_bat smallint [null]
  repeater1_bat smallint [null]
  repeater2_bat smallint [null]
  lock_state smallint [null]
  reported_at timestamptz [default: `now()`]
  created_by uuid [null]
  
  indexes {
    (truck_id, reported_at) [name: 'idx_device_status_truck_ts']
  }
}

Table sensor {
  id uuid [pk]
  device_id uuid [not null]
  type varchar [null]
  position_no integer [not null]
  sn varchar [unique, null]
  installed_at timestamptz [default: `now()`]
  removed_at timestamptz [null]
  created_by uuid [null]
  updated_by uuid [null]
}

// ==========================================
// ADDITIONAL RELATIONSHIPS
// ==========================================

Ref: truck.id < device.truck_id [delete: no action]
Ref: truck.id < gps_position.truck_id [delete: no action]
Ref: truck.id < tire_pressure_event.truck_id [delete: no action]
Ref: truck.id < alert_event.truck_id [delete: no action]
Ref: truck.id < device_status_event.truck_id [delete: no action]

Ref: device.id < gps_position.device_id [delete: no action]
Ref: device.id < tire_pressure_event.device_id [delete: no action]
Ref: device.id < device_status_event.device_id [delete: no action]
Ref: device.id < sensor.device_id [delete: no action]
